# agente_ia_zero

./: README.md  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
src/agente_ia_zero/: main.py  type_hints.py
src/agente_ia_zero/database/db/: chroma.sqlite3
src/agente_ia_zero/exemples/basic_exemples/: ex001.py  ex002.py  ex003.py  ex003_02.py  ex004.py  ex004_02.py
src/agente_ia_zero/exemples/react_agent/: graph.py  langgraph.json  main.py  prompts.py  state.py  tools.py  utils.py
