[project]
name = "agente-ia-zero"
version = "0.1.0"
description = "Projeto teste para um agente de IA simples."
authors = [
    {name = "ruizgabriel161",email = "ruizgabriel161@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "agente_ia_zero", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
taskipy = "^1.14.1"
ruff = "^0.14.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true

[tool.ruff.format]
preview = true

[tool.pytest.ini_options]
pythonpath = "."

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'python src/agente_ia_zero/app.py'
pre_test = 'task lint'
